Mockito added isMoveCorrect test added